Fixesmutliselect validation overflow issue

--- a/assets/_styles/_forms.scss
+++ b/assets/_styles/_forms.scss
@@ -329,9 +329,9 @@ input[type="file"] {
    ========================================================================== */
 
 %validation-box {
-  padding: 1em 1em 0 1em;
+  padding: 1em 1em .5em 1em;
   margin: 0 0 1em -1em;
-  overflow: hidden;
+  overflow: visible;
   background: $warning-background;
   @media (max-width: 640px){
     margin-left: -1em;
@@ -365,6 +365,9 @@ input[type="file"] {
     display: block;
     margin-bottom: .5em;
     color: $mellow-red;
+  }
+  .active-result {
+    color: $black;
   }
 }
 
